<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fond2"
    android:padding="10dp"
    tools:context=".InscriptionActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/signup"
        android:textSize="50dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="70dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Username"
        android:textSize="25dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/edittextbackground"
        android:layout_marginBottom="30dp"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Password"
        android:textSize="25dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/edittextbackground"
        android:layout_marginBottom="30dp"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/ConfirmPassword"
        android:textSize="25dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/edittextbackground"
        android:layout_marginBottom="30dp"
        android:paddingLeft="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/signup"
        android:text="@string/signup"
        android:textSize="20dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/signin"
        android:text="@string/AccountExists"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="#00000000"
        android:layout_marginBottom="30dp" />

</androidx.appcompat.widget.LinearLayoutCompat>